[package]
name = "driver_for_rtt"
version = "0.1.0"
authors = ["chenhonglin <chenhonglinchl@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["staticlib"]
#name = "driver_for_rtt"

[dependencies]
rtt_rs = {git = "https://github.com/vito-chl/rtt_rs.git", branch = "dev",optional = true}
lazy_static = { version = "1.4", features = ["spin_no_std"] }
mlib = {git = "https://gitee.com/vitors/mlib.git", optional = true}
paste = "1.0.4"
typenum = "1.13.0"
generic-array = "0.14.4"
num_enum = { version = "0.5.1", default_features = false }

stm32f7 = {version =  "0.13.0", optional = true }
stm32h7 = {version = "0.13.0", optional = true }

cortex-m = "0.7.3"
vcell = "0.1.3"
embedded-hal = "0.2.5"

[features]
default = ["c_core", "art_pi", "stm32h750v"]
c_core = ["rtt_rs"]
r_core = ["mlib"]

stm32f7_nucleo = ["stm32f7/stm32f7x6"]
stm32h750v = ["stm32h7/stm32h743v"]

# 设备名称
stm32f746zg_nucleo = ["stm32f7"]
art_pi = ["stm32h7"]